# operation-ghost-proposal

./: .gitignore  Beaker.toml  Cargo.toml  cw20_transfer.json  mirrorbox_migrate_msg.json  overstake_trapdoor_migrate_msg.json  trapdoor_migrate_msg.json  upload.sh
.github/workflows/: release-artifacts.yml
archive/cw20-stake/: Cargo.toml
contracts/mirrorbox/: Cargo.toml  README.md
contracts/mirrorbox/src/: contract.rs  msg.rs
contracts/smokescreen/: Cargo.toml
contracts/smokescreen/src/: contract.rs  msg.rs
contracts/trapdoor/: Cargo.toml  NOTICE
contracts/trapdoor/src/: contract.rs  msg.rs
ts/sdk/: README.md  package.json  typedoc.json
